@@ -567,11 +567,9 @@ int genaSubscribe(
 	return_code = ScheduleGenaAutoRenew(client_handle, *TimeOut, newSubscription);
 
 error_handler:
-	if (return_code != UPNP_E_SUCCESS) {
-		UpnpString_delete(ActualSID);
-		UpnpString_delete(EventURL);
-		UpnpClientSubscription_delete(newSubscription);
-	}
+	UpnpString_delete(ActualSID);
+	UpnpString_delete(EventURL);
+	UpnpClientSubscription_delete(newSubscription);
 	HandleUnlock();
 	SubscribeUnlock();
 
